--- a/ReTek_CarMechanical/Views/MainWindow.xaml
+++ b/ReTek_CarMechanical/Views/MainWindow.xaml
@@ -7,6 +7,8 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        <Label Content="{Binding Test}"></Label>
+        <StackPanel>
+            <Label Content="{Binding Test}"></Label>
+        </StackPanel>
     </Grid>
 </Window>
