--- a/ReTek_CarMechanical/Views/ServiceView.xaml
+++ b/ReTek_CarMechanical/Views/ServiceView.xaml
@@ -5,16 +5,16 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ReTek_CarMechanical.Views"
         mc:Ignorable="d"
-        Title="ServiceView" Height="450" Width="800">
-    <Grid>
-        <StackPanel>
-            <Label Content="Válassza ki a kívánt szolgáltatást"></Label>
-            <Label Content="Szolgáltatás"></Label>
-            <TextBox Text="{Binding ServiceName}"></TextBox>
-            <Label Content="Szolgtatás ára"></Label>
-            <TextBox Text="{Binding ServicePrice}"></TextBox>
-            <Button Content="Szolgáltatás kiválasztása" Command="{Binding AddNewServiceCommand}"></Button>
-        </StackPanel>
-    </Grid>
-            
+        Title="ServiceView" Height="210" Width="300">
+   <Grid>
+      <StackPanel>
+         <Label Content="Válassza ki a kívánt szolgáltatást"></Label>
+         <Label Content="Szolgáltatás" ></Label>
+         <TextBox Text="{Binding ServiceName}" Margin="0,0,0,10"></TextBox>
+         <Label Content="Szolgtatás ára"></Label>
+         <TextBox Text="{Binding ServicePrice}" Margin="0,0,0,10"></TextBox>
+         <Button Content="Szolgáltatás hozzáadása" Command="{Binding AddNewServiceCommandHandler}" Margin="0,10,0,10"></Button>
+      </StackPanel>
+   </Grid>
+
 </Window>
