--- a/ReTek_CarMechanical/Views/MainWindow.xaml
+++ b/ReTek_CarMechanical/Views/MainWindow.xaml
@@ -11,7 +11,7 @@
             <Button Content="Ügyfelek" Command="{Binding ClientCommandHandler}"></Button>
             <Button Content="Gépjárművek" Command="{Binding CarCommandHandler}"></Button>
             <Button Content="Szolgáltatások" Command="{Binding ServiceCommandHandler}"></Button>
-            <Button Content="Alkatrészek"></Button>
+            <Button Content="Alkatrészek" Command="{Binding PartCommandHandler}"></Button>
             <Button Content="Munkalap"></Button>
             <DataGrid Margin="10" Name="lvUsers" ItemsSource="{Binding Clients}" AutoGenerateColumns="True" >
                 
