--- a/ReTek_CarMechanical/Views/ServiceView.xaml
+++ b/ReTek_CarMechanical/Views/ServiceView.xaml
@@ -10,9 +10,9 @@
       <StackPanel>
          <Label Content="Válassza ki a kívánt szolgáltatást"></Label>
          <Label Content="Szolgáltatás" ></Label>
-         <TextBox Text="{Binding ServiceName}" Margin="0,0,0,10"></TextBox>
+            <TextBox Text="{Binding ServiceName, UpdateSourceTrigger=PropertyChanged}" Margin="0,0,0,10"></TextBox>
          <Label Content="Szolgtatás ára"></Label>
-         <TextBox Text="{Binding ServicePrice}" Margin="0,0,0,10"></TextBox>
+            <TextBox Text="{Binding ServicePrice, UpdateSourceTrigger=PropertyChanged}" Margin="0,0,0,10"></TextBox>
          <Button Content="Szolgáltatás hozzáadása" Command="{Binding AddNewServiceCommandHandler}" Margin="0,10,0,10"></Button>
       </StackPanel>
    </Grid>
