--- a/ReTek_CarMechanical/Views/CarView.xaml
+++ b/ReTek_CarMechanical/Views/CarView.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ReTek_CarMechanical.Views"
         mc:Ignorable="d"
-        Title="Gépjármű hozzáadása" Height="360" Width="300" WindowStartupLocation="CenterOwner">
+        Title="Gépjármű hozzáadása" Height="370" Width="300" WindowStartupLocation="CenterOwner" ResizeMode="NoResize">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="0*"/>
