--- a/ReTek_CarMechanical/Views/MainWindow.xaml
+++ b/ReTek_CarMechanical/Views/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ReTek_CarMechanical"
         mc:Ignorable="d"
-        Title="MainWindow" Height="800" Width="800" WindowStartupLocation="CenterScreen">
+        Title="MainWindow" Height="800" Width="800" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="1*" />
@@ -19,6 +19,7 @@
         <Grid Grid.Row="0">
             <Grid.RowDefinitions>
                 <RowDefinition Height="1*" />
+                <RowDefinition Height="1*" />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="1*"/>
@@ -31,9 +32,10 @@
             <Button Grid.Row="0" Grid.Column="1" Margin="5" Content="Gépjárművek" Command="{Binding CarCommandHandler}"></Button>
             <Button Grid.Row="0" Grid.Column="2" Margin="5" Content="Szolgáltatások" Command="{Binding ServiceCommandHandler}"></Button>
             <Button Grid.Row="0" Grid.Column="3" Margin="5" Content="Alkatrészek" Command="{Binding PartCommandHandler}"></Button>
-            <Button Grid.Row="0" Grid.Column="4" Margin="5" Content="Munkalap"></Button>
+            <Button Grid.Row="0" Grid.Column="4" Margin="5" Content="Munkalap" Command="{Binding WorksheetCommandHandler}"></Button>
+            <Button Grid.Row="1" Grid.Column="2" Margin="5" Content="Adatok frissítése" Command="{Binding UpdateDataGridsCommandHandler}"></Button>
         </Grid>
-        <DataGrid  Grid.Row="1"  Margin="5" Name="lvUsers" ItemsSource="{Binding Clients}" AutoGenerateColumns="False">
+        <DataGrid  Grid.Row="1"  Margin="5" Name="lvUsers" ItemsSource="{Binding Clients}" AutoGenerateColumns="False" IsReadOnly="True">
             <DataGrid.Columns>
                 <DataGridTextColumn Width="*" Binding="{Binding ClientId}" Header="ID" Visibility="Hidden"/>
                 <DataGridTextColumn Width="*" Binding="{Binding FirstName}" Header="Keresztnév"/>
@@ -45,7 +47,7 @@
                 <DataGridTextColumn Width="*" Binding="{Binding DateRegistered}" Header="Regisztrálás"/>
             </DataGrid.Columns>
         </DataGrid>
-        <DataGrid  Grid.Row="2"  Margin="5"  Name="lvUsers2" ItemsSource="{Binding Cars }" AutoGenerateColumns="False">
+        <DataGrid  Grid.Row="2"  Margin="5"  Name="lvUsers2" ItemsSource="{Binding Cars }" AutoGenerateColumns="False" IsReadOnly="True">
             <DataGrid.Columns>
                 <DataGridTextColumn Width="*" Binding="{Binding CarId}" Header="ID" Visibility="Hidden"/>
                 <DataGridTextColumn Width="*" Binding="{Binding CarPlateNumber}" Header="Rendszám"/>
@@ -55,14 +57,14 @@
                 <DataGridTextColumn Width="*" Binding="{Binding CarOwner}" Header="Tulajdonos"/>
             </DataGrid.Columns>
         </DataGrid>
-        <DataGrid  Grid.Row="3"  Margin="5" Name="lvUsers3" ItemsSource="{Binding Services}" AutoGenerateColumns="False">
+        <DataGrid  Grid.Row="3"  Margin="5" Name="lvUsers3" ItemsSource="{Binding Services}" AutoGenerateColumns="False" IsReadOnly="True">
             <DataGrid.Columns>
                 <DataGridTextColumn Width="*" Binding="{Binding ServiceId}" Header="ID" Visibility="Hidden"/>
                 <DataGridTextColumn Width="*" Binding="{Binding ServiceName}" Header="Szolgáltatás"/>
                 <DataGridTextColumn Width="*" Binding="{Binding ServicePrice}" Header="Szolgáltatás ára"/>
             </DataGrid.Columns>
         </DataGrid>
-        <DataGrid  Grid.Row="4"  Margin="5" Name="lvUsers4" ItemsSource="{Binding Parts}" AutoGenerateColumns="False">
+        <DataGrid  Grid.Row="4"  Margin="5" Name="lvUsers4" ItemsSource="{Binding Parts}" AutoGenerateColumns="False" IsReadOnly="True">
             <DataGrid.Columns>
             <DataGridTextColumn Width="*" Binding="{Binding PartId}" Header="ID" Visibility="Hidden"/>
             <DataGridTextColumn Width="*" Binding="{Binding PartName}" Header="Alkatrész"/>
@@ -70,7 +72,7 @@
             <DataGridTextColumn Width="*" Binding="{Binding Quantity}" Header="Mennyiség"/>
                 </DataGrid.Columns>
         </DataGrid>
-        <DataGrid  Grid.Row="5"  Margin="5" Name="lvUsers5" ItemsSource="{Binding Worksheets}" AutoGenerateColumns="False">
+        <DataGrid  Grid.Row="5"  Margin="5" Name="lvUsers5" ItemsSource="{Binding Worksheets}" AutoGenerateColumns="False" IsReadOnly="True">
             <DataGrid.Columns>
             <DataGridTextColumn Width="*" Binding="{Binding WorksheetId}" Header="ID" Visibility="Hidden"/>
             <DataGridTextColumn Width="*" Binding="{Binding WorkStart}" Header="Kezdete"/>
