--- a/ReTek_CarMechanical/Views/PartView.xaml
+++ b/ReTek_CarMechanical/Views/PartView.xaml
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:ReTek_CarMechanical.Views"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="Alkatrész hozzáadása" Height="230" Width="300" WindowStartupLocation="CenterOwner">
+      Title="Alkatrész hozzáadása" Height="240" Width="300" WindowStartupLocation="CenterOwner" ResizeMode="NoResize">
    <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="0*"/>
@@ -18,7 +18,7 @@
             <Label Content="Alketrész ára"></Label>
          <TextBox Text="{Binding PartPrice,UpdateSourceTrigger=PropertyChanged}" Margin="5"></TextBox>
             <Label Content="Készlet"></Label>
-         <TextBox Text="{Binding PartQuantity,UpdateSourceTrigger=PropertyChanged}"  Margin="5"></TextBox>
+            <TextBox Text="{Binding Quantity,UpdateSourceTrigger=PropertyChanged}"  Margin="5"></TextBox>
          <Button Content="Alkatrészek regisztrálása" Command="{Binding AddNewPartCommandHandler}"  Margin="5" Height="30"></Button>
         </StackPanel>
     </Grid>
