--- a/ReTek_CarMechanical/Views/ServiceView.xaml
+++ b/ReTek_CarMechanical/Views/ServiceView.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ReTek_CarMechanical.Views"
         mc:Ignorable="d"
-        Title="Szolgáltatás hozzáadása" Height="200" Width="300" WindowStartupLocation="CenterOwner">
+        Title="Szolgáltatás hozzáadása" Height="210" Width="300" WindowStartupLocation="CenterOwner" ResizeMode="NoResize">
    <Grid>
       <StackPanel>
          <Label Content="Szolgáltatás neve" ></Label>
