--- a/ReTek_CarMechanical/Views/ServiceView.xaml
+++ b/ReTek_CarMechanical/Views/ServiceView.xaml
@@ -10,7 +10,7 @@
       <StackPanel>
          <Label Content="Szolgáltatás neve" ></Label>
             <TextBox Text="{Binding ServiceName, UpdateSourceTrigger=PropertyChanged}" Margin="10"></TextBox>
-         <Label Content="Szolgtatás ára (forintban értendő)"></Label>
+         <Label Content="Szolgáltatás ára (forintban értendő)"></Label>
          <TextBox Text="{Binding ServicePrice, UpdateSourceTrigger=PropertyChanged}" Margin="10"></TextBox>
          <Button Content="Szolgáltatás hozzáadása" Command="{Binding AddNewServiceCommandHandler}" Margin="5" Height="30"></Button>
       </StackPanel>
